--- a/src/App.css
+++ b/src/App.css
@@ -1,69 +1,234 @@
+@import url("https://use.fontawesome.com/releases/v5.9.0/css/all.css");
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  background-color: #282c34;
+}
+.before-grid {
+  margin-bottom: 5px;
+  width: 80vw;
+}
+
+/* .logo {
+  color: #000;
+  box-sizing: border-box;
+  line-height: 1.2;
+  font-size: 2.5rem;
+  font-weight: 700;
+  position: relative;
+  z-index: 1;
+  width: 180px;
+  padding: 0;
+  margin: 0;
+
+} */
+
+.logo {
+  font: 0/0 a;
+  width: 180px;
+  display: block;
+  margin-left: 18px;
+  margin-right: 24px;
+  border: 0;
+  outline: 0;
+}
+
 .App {
   text-align: center;
   color: white;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+.App-wrapper {
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  /* display: flex; */
+  /* flex-direction: column; */
+  /* align-items: center;
+  justify-content: center; */
+  font-size: 1.2rem;
   color: white;
 }
 
-/* .edit-delete-list {
+nav ul {
+  display: flex;
+  justify-content: space-between;
+  list-style-type: none;
+}
+
+.header {
+  display: flex;
+  position: relative;
+  z-index: 7000;
+  padding: 0 20px 0 0;
+  background: #0b0c0f;
+  margin: 0;
+  align-items: center;
+  height: 64px;
+  font-size: 16px;
+}
+.header > nav {
+  flex: 1;
+}
+.header > nav > ul {
+  display: flex;
+  height: 100%;
+}
+.header > nav > ul > li {
   display: grid;
-  text-align: left;
-  margin: 25px;
+  place-items: center;
+  height: 100%;
+  position: relative;
+}
+.header > nav > ul > li > a {
+  line-height: 1.5;
+  font-size: 14px;
+
+  display: block;
+  padding: 0.5rem;
+  white-space: nowrap;
+}
+.primary-edit {
+  margin-right: auto;
+}
+.component-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.quote-container,
+.form-container {
+  padding: 30px;
+  margin-left: 5%;
+  margin-right: 5%;
+  border-radius: 1em;
+}
+.quote-container {
+  background: rgba(225, 0, 255, 0.45);
+}
+.form-container {
+  background: #222628;
+}
+.form-input-wrapper {
+  margin: 20px;
+  grid-template-columns: 1fr 4fr;
+  grid-template-rows: 1fr;
+  display: grid;
+  gap: 30px;
+  justify-items: start;
+}
+.form-input-wrapper > textarea,
+input {
+  width: 45vw;
+  margin-right: 25px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
 
-.edit-delete-id,
-.edit-delete-quote,
-.edit-delete-author {
-  padding: 5px;
-  color: grey;
-} */
-
-#myGrid {
-  text-align: left;
+.quote-text {
+  text-shadow: 2px 2px rgba(66, 66, 66, 0.5);
 }
-
 .page {
   margin-top: 10px;
   font-size: calc(6px + 2vmin);
 }
-
+.description {
+  font-size: 14px;
+  margin-bottom: 25px;
+  color: rgba(255, 255, 255, 0.8);
+  max-width: max(50vw, 280px);
+}
 a,
 a:visited {
   color: #61dafb;
+  text-decoration: none;
+}
+h2 {
+  font-weight: normal;
+  margin: 50px 24px 24px 24px;
+}
+button {
+  margin: 15px;
+  -webkit-font-smoothing: antialiased;
+  letter-spacing: 1px;
+  appearance: button;
+  background-color: black;
+  border: solid transparent;
+  border-radius: 16px;
+  border-width: 0 0 4px;
+  box-sizing: border-box;
+  color: #ffffff;
+  cursor: pointer;
+  display: inline-block;
+  font-weight: 700;
+  line-height: 20px;
+  outline: none;
+  overflow: visible;
+  padding: 13px 16px;
+  text-align: center;
+  text-transform: uppercase;
+  touch-action: manipulation;
+  transform: translateZ(0);
+  transition: filter 0.2s;
+  vertical-align: middle;
+  white-space: nowrap;
+  filter: brightness(1.1);
+  transition: 0.05s;
+}
+button::after {
+  content: "";
+  position: absolute;
+  bottom: -4px;
+  left: 0;
+  right: 0;
+  top: 0;
+  z-index: -1;
+  background-clip: padding-box;
+  background-color: #333;
+  border: solid transparent;
+  border-radius: 16px;
+  border-width: 0 0 4px;
+}
+button:focus {
+  outline: 1px solid white;
+}
+#myGrid {
+  height: 48vh;
+  width: 80vw;
 }
 
-@media (max-width: 725px) {
-  .hide-on-mobile {
-    display: none !important;
+@media (max-width: 600px) {
+  .header-chunk {
+    width: 100%;
+    margin: 0;
+    height: auto;
+    object-position: 50% 50%;
+  }
+  .logo {
+    margin-left: auto;
+    margin-right: auto;
+    width: 90px;
+    margin-top: 10px;
+  }
+  .description {
+    padding: 0 10px;
+  }
+  .form-container {
+    background: inherit;
+    margin: 0 10px;
+  }
+  h2 {
+    margin-top: 18px;
   }
 }
-
-@media (min-width: 726px) {
-  .hide-on-desktop {
-    display: none !important;
-  }
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+@media (max-width: 600px) {
+  .header {
+    flex-wrap: wrap;
+    padding: 0;
+    align-items: center;
   }
 }
