--- a/src/App.css
+++ b/src/App.css
@@ -14,20 +14,6 @@ body {
   width: 80vw;
 }
 
-/* .logo {
-  color: #000;
-  box-sizing: border-box;
-  line-height: 1.2;
-  font-size: 2.5rem;
-  font-weight: 700;
-  position: relative;
-  z-index: 1;
-  width: 180px;
-  padding: 0;
-  margin: 0;
-
-} */
-
 .logo {
   font: 0/0 a;
   width: 180px;
@@ -45,10 +31,6 @@ body {
 
 .App-wrapper {
   min-height: 100vh;
-  /* display: flex; */
-  /* flex-direction: column; */
-  /* align-items: center;
-  justify-content: center; */
   font-size: 1.2rem;
   color: white;
 }
@@ -129,15 +111,19 @@ input {
 #create-quote {
   margin-bottom: 20px;
 }
-.form- {
+.form-label {
   margin-bottom: 5px;
+  font-size: 14px;
 }
 .quote-text {
   text-shadow: 2px 2px rgba(66, 66, 66, 0.5);
 }
+.fa-quote-right {
+  margin-bottom: 15px;
+}
 .page {
   margin-top: 10px;
-  font-size: calc(6px + 2vmin);
+  font-size: 14px;
 }
 .description {
   font-size: 14px;
